@@ -1,6 +1,10 @@
 x2goclient (4.1.1.2-0x2go1) UNRELEASED; urgency=medium
 
-  * Continue development
+  [ Mike DePaulo ]
+  * New upstream version (4.1.1.2):
+    - src/sshmasterconnection.cpp: Do not attempt to perform Interaction with
+      SSH Server (e.g. for changing expired password) when using
+      GSSAPI/Kerberos because the interaction code does not support it yet.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 15 Feb 2018 22:01:32 +0100
 
